--- a/resources.html
+++ b/resources.html
@@ -566,26 +566,23 @@
       overflow: hidden;
     }
 
-    /* ===== RESPONSIVE ===== */
-
     .video-wrapper {
-  position: relative;
-  width: 100%;
-  padding-top: 56.25%; /* 16:9 ratio */
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 18px 40px rgba(0,0,0,0.25);
-  background: #000;
-}
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* 16:9 ratio */
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 18px 40px rgba(0,0,0,0.25);
+      background: #000;
+    }
 
-.video-wrapper iframe {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  border: 0;
-}
-
+    .video-wrapper iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
 
     @media (max-width: 900px) {
       .res-hero {
@@ -690,7 +687,12 @@
               PDF · 12 pages · Updated 2025
             </div>
             <div class="res-featured-actions">
-              <a href="#" class="btn brand-primary res-btn">Download guide</a>
+              <a href="resources/wholesale-glass-selection-guide.pdf"
+                 class="btn brand-primary res-btn"
+                 target="_blank"
+                 rel="noopener">
+                Download guide
+              </a>
               <a href="contact.html" class="btn ghost res-btn">Talk to our team</a>
             </div>
           </div>
@@ -735,9 +737,9 @@
         <div class="res-popular">
           <div class="res-popular-label">Popular right now</div>
           <div class="res-popular-links">
-            <a href="#">Laminate safety overview</a>
-            <a href="#">DGU install checklist</a>
-            <a href="#">Low-E performance pack</a>
+            <a href="resources/safety-laminated-glass-overview.pdf" target="_blank">Laminate safety overview</a>
+            <a href="resources/dgu-install-checklist.pdf" target="_blank">DGU install checklist</a>
+            <a href="resources/lowe-performance-pack.zip" target="_blank">Low-E performance pack</a>
           </div>
         </div>
 
@@ -750,7 +752,7 @@
         <!-- RESOURCES GRID -->
         <div class="res-grid" id="resGrid">
 
-          <!-- Example card 1 -->
+          <!-- Card 1: Safety laminated overview -->
           <article class="res-card" data-type="guide">
             <div class="res-download-badge">1.2k downloads</div>
             <div class="res-thumb">
@@ -765,11 +767,17 @@
                 Key points when specifying laminated safety glass for shopfronts, balustrades and doors,
                 including thickness options and compliance notes.
               </p>
-              <a href="#"><span class="btn brand-primary res-btn">Download PDF</span></a>
+              <a href="resources/safety-laminated-glass-overview.pdf"
+                 class="btn brand-primary res-btn"
+                 target="_blank"
+                 rel="noopener"
+                 download>
+                Download PDF
+              </a>
             </div>
           </article>
 
-          <!-- Example card 2 -->
+          <!-- Card 2: Insulated & LowE pack -->
           <article class="res-card" data-type="spec">
             <div class="res-thumb">
               <img src="https://cdn.prod.website-files.com/65658a4e3be6837278a4b823/6809817d1d704920a718e3a7_6604d700dd95118fa157d17f_InsulCool-UPL-Thumb.webp"
@@ -783,11 +791,15 @@
                 Thermal and solar performance data for common double glazed and Low-E combinations used
                 on Davis Glass projects.
               </p>
-              <a href="#"><span class="btn brand-primary res-btn">Download pack</span></a>
+              <a href="resources/insulated-lowe-performance-pack.zip"
+                 class="btn brand-primary res-btn"
+                 download>
+                Download pack
+              </a>
             </div>
           </article>
 
-          <!-- Example card 3 -->
+          <!-- Card 3: Tool -->
           <article class="res-card" data-type="tool">
             <div class="res-thumb">
               <img src="https://media.licdn.com/dms/image/v2/D5612AQGZUFNJGTLAjg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1701825853210?e=2147483647&v=beta&t=FNR0BYoJxC2XNYnv3hYrK1Yomd8lj5J1oByks9Mj5Gs"
@@ -801,23 +813,24 @@
                 Check typical thickness ranges for doors, windows and shopfronts before finalising your
                 order with our team.
               </p>
-              <a href="#"><span class="btn brand-primary res-btn">Open tool</span></a>
+              <a href="tools/glass-thickness-calculator.html" class="btn brand-primary res-btn">
+                Open tool
+              </a>
             </div>
           </article>
 
-          <!-- Example card 4 (VIDEO) -->
+          <!-- Card 4: Video -->
           <article class="res-card" data-type="video">
             <div class="res-thumb">
-             <div class="video-wrapper">
-              <iframe
-                src="https://www.youtube.com/embed/HJSfnC7Wj1E"
-                title="Installation video"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-              </iframe>
-            </div>
-
+              <div class="video-wrapper">
+                <iframe
+                  src="https://www.youtube.com/embed/HJSfnC7Wj1E"
+                  title="Installation video"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen>
+                </iframe>
+              </div>
               <span class="res-type-badge">Video</span>
             </div>
             <div class="res-card-body">
@@ -828,13 +841,13 @@
                 aimed at shopfront and residential installers.
               </p>
               <a href="#" class="res-video-trigger"
-                 data-video="https://www.youtube.com/embed/dQw4w9WgXcQ">
+                 data-video="https://www.youtube.com/embed/HJSfnC7Wj1E">
                 <span class="btn brand-primary res-btn">Watch video</span>
               </a>
             </div>
           </article>
 
-          <!-- Example card 5 -->
+          <!-- Card 5: Case study -->
           <article class="res-card" data-type="case">
             <div class="res-thumb">
               <img src="https://images.unsplash.com/photo-1511818966892-d7d671e672a2?auto=format&fit=crop&w=900&q=70"
@@ -848,11 +861,13 @@
                 How a busy retailer replaced damaged shopfront glass with laminated units, using Davis Glass
                 for same-day turnaround.
               </p>
-              <a href="#"><span class="btn brand-primary res-btn">Read case study</span></a>
+              <a href="case-studies/retail-shopfront-upgrade.html" class="btn brand-primary res-btn">
+                Read case study
+              </a>
             </div>
           </article>
 
-          <!-- Example card 6 -->
+          <!-- Card 6: Care & cleaning checklist -->
           <article class="res-card" data-type="guide">
             <div class="res-thumb">
               <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?auto=format&fit=crop&w=900&q=70"
@@ -866,7 +881,13 @@
                 A simple handout for your customers: how to clean and protect glass, and what to avoid around
                 coated and laminated products.
               </p>
-              <a href="#"><span class="btn brand-primary res-btn">Download PDF</span></a>
+              <a href="resources/glass-care-cleaning-checklist.pdf"
+                 class="btn brand-primary res-btn"
+                 target="_blank"
+                 rel="noopener"
+                 download>
+                Download PDF
+              </a>
             </div>
           </article>
 
@@ -970,14 +991,17 @@
             e.preventDefault();
             const url = this.dataset.video;
             if (!url) return;
-            videoFrame.src = url;
+            videoFrame.src = url + "?autoplay=1";
             videoModal.classList.add('open');
           });
         });
 
-        videoModal.addEventListener('click', function () {
-          videoModal.classList.remove('open'); 
-          videoFrame.src = '';
+        videoModal.addEventListener('click', function (e) {
+          // backdrop click only
+          if (e.target === videoModal) {
+            videoModal.classList.remove('open');
+            videoFrame.src = '';
+          }
         });
       }
 
